# hyperlink_button

./: .claude  .dockerignore  .gitignore  AGENTS.md  ANSWER.md  CHANGELOG.md  DIAGNOSTIC_REPORT.md  DIAGNOSTIC_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.e2e  GOAL.md  LICENSE  MANIFEST.in  PUBLISHING.md  PYPI_WORKFLOW.md  QA.md  QUICK_REFERENCE.md  README.md  SOLUTION3_IMPLEMENTATION.md  SOLUTIONS.md  TESTPYPI_WORKFLOW.md  VISUAL_GUIDE.md  WHY_BUTTON_CLICKS_ARE_HARD.md  compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  st_docs
.github/workflows/: docker-ci.yml  publish-to-pypi.yml  publish-to-testpypi.yml
.opencode-subagent/: registry.json  start.ts
_review/: COMPARATIVE_ANALYSIS.md  REVIEW.md  notes.md  session-ses_3709.md  session-ses_3a30.md  session-ses_3b1b.md  session-ses_3b22.md  session-ses_3b2d.md  session-ses_3b3c.md
docker/: dev-5.Dockerfile
docs/: PUBLISHING.md  PYPI_PUBLISHING.md  TESTING.md  publishing_pypi.md  pypi-publish.md  pypi_release_manual.md  usage.md
examples/: app.py  basic_app.py  demo.py  demo_app.py  e2e_app.py  inspect_dom.py  solution3_demo.py  tree_veiew_app.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.ts  main.ts
hyperlink_button/: __init__.py  _component.py
hyperlink_button/frontend/: index.html  package.json  vite.config.ts
hyperlink_button/frontend/src/: HyperlinkButton.tsx  index.css  main.tsx
hyperlink_button/frontend/src/__tests__/: click_diagnostic.test.tsx
scripts/: docker-e2e.sh  docker-run-example.sh  docker-test.sh  inspect_component_page.py  playwright_inspect_button.py  print_component_registry.py  run_integration_tests.sh  run_streamlit_for_e2e.py
specs/: implementation_approach.md  st_button_parity.md  testing_plan.md
src/hyperlink_button/: __init__.py  _component.py  _element.py  _widget.py  component.py  core.py  widget.py
src/hyperlink_button/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/hyperlink_button/frontend/src/: HyperlinkButton.tsx  index.tsx  style.css
tests/: _e2e_harness.py  conftest.py  e2e_app.py  test_api.py  test_app_smoke.py  test_apptest_smoke.py  test_basic.py  test_click_edge.py  test_demo_click.py  test_e2e.py  test_e2e_playwright.py  test_forwarding.py  test_markup.py  test_streamlit_testing.py  test_widget.py
tests/e2e/: test_advanced_diagnostics.py  test_click_diagnostics.py  test_iframe_remount.py  test_playwright.py  test_playwright_e2e.py  test_solution3_sync_counter.py
tests/fixtures/: app_for_click_diagnostics.py  app_for_e2e.py
tests/unit/: test_click_diagnostic.py  test_wrapper.py
tests_e2e/: test_e2e_click.py
