[project]
name = "hyperlink-button"
version = "0.1.0"
description = "Streamlit button that looks like a hyperlink"
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "hyperlink-button contributors" }]
keywords = ["streamlit", "widget", "button", "link", "hyperlink"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Streamlit",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "streamlit",
]

[project.urls]
Homepage = "https://pypi.org/project/hyperlink-button/"
Repository = "https://github.com/your-org/hyperlink-button"
Issues = "https://github.com/your-org/hyperlink-button/issues"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "playwright",
    "pytest",
    "pytest-timeout",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
