[project]
name = "hyperlink-button"
version = "0.1.0"
description = "A Streamlit button that looks like a hyperlink"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Maxim Saplin", email = "smaxmail@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "streamlit",
]

keywords = ["streamlit", "component", "widget", "button", "link"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "**/__pycache__/**",
    "**/*.pyc",
    "src/hyperlink_button/frontend/node_modules/**",
    "src/hyperlink_button/frontend/dist/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hyperlink_button"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hyperlink_button/**",
    "README.md",
    "LICENSE",
    "docs/**",
    "examples/**",
]

[dependency-groups]
dev = [
    "build",
    "mypy",
    "pytest",
    "playwright",
    "ruff",
    "twine",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-q"]
markers = [
    "e2e: end-to-end tests that require Playwright + browsers",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
ignore_missing_imports = true
